front page profil

--- a/mangafric/src/app/components/header/header.component.html
+++ b/mangafric/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <header>
     <nav *ngIf="user">
         <button class="btn" mat-flat-button (click)="home()">Accueil</button>
+        <button class="btn" mat-flat-button (click)="profil()">Mon profil</button>
         <button class="btn" mat-flat-button (click)="logout()">Déconnexion</button>
     </nav>
 
