--- a/mangafric/src/app/components/home/home.component.scss
+++ b/mangafric/src/app/components/home/home.component.scss
@@ -28,3 +28,11 @@
   display: flex;
   justify-content: center;
 }
+
+.fill-true {
+  font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
